Completed the definition API
